manipulated weights, changed one equation

--- a/proj1.ipynb
+++ b/proj1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "26  0.80  0.06  1.00  0.67"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
     "\n",
     "Nasza preferencja zakłda wybór wariantów gdzie oba kryteria, c3 i c4, są niższe. W efekcie:\n",
     "\n",
-    "- 3 jest nierozróżnialne z 17\n",
+    "- 3 jest preferowane nad 17\n",
     "- 11 jest preferowane nad 14\n",
     "- 0 jest nierozróżnialne z 11\n",
     "- 13 jest preferowane nad 25\n",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
     "# Add constraints:\n",
     "\n",
     "# preferations\n",
-    "prob += u1_48 + u2_87 + u3_0 + u4_75 == u1_76 + u2_6 + u3_100 + u4_60, \"3 incomparable with 17\"\n",
+    "prob += u1_48 + u2_87 + u3_0 + u4_75 >= u1_76 + u2_6 + u3_100 + u4_60 + e, \"3 incomparable with 17\"\n",
     "prob += u1_74 + u2_25 + u3_80 + u4_49 >= u1_87 + u2_3 + u3_100 + u4_61 + e, \"11 prefered over 14\"\n",
     "prob += u1_60 + u2_93 + u3_0 + u4_73 == u1_74 + u2_25 + u3_80 + u4_49 , \"0 incomparable with 11\"\n",
     "#prob += u1_69 + u2_49 + u3_56 + u4_61 >= u1_71 + u2_25 + u3_88 + u4_67 + e, \"13 prefered over 25\"\n",
@@ -435,13 +435,16 @@
     "        prob += a >= b\n",
     "\n",
     "# manipulating weights\n",
-    "prob += u3_0 >= u1_32 + u2_3 + 0.07\n",
-    "prob += u4_49 >= u1_32 + u2_3 + 0.07\n"
+    "prob += u3_0 >= u2_3 * 4\n",
+    "prob += u3_0 >= u1_32 * 2\n",
+    "prob += u4_49 >= u1_32 + u2_3\n",
+    "prob += u1_32 >= 0.10\n",
+    "prob += u2_3 >= 0.02\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -451,8 +454,8 @@
        "MAXIMIZE\n",
        "1*e + 0\n",
        "SUBJECT TO\n",
-       "3_incomparable_with_17: u1_48 - u1_76 - u2_6 + u2_87 + u3_0 - u3_100 - u4_60\n",
-       " + u4_75 = 0\n",
+       "3_incomparable_with_17: - e + u1_48 - u1_76 - u2_6 + u2_87 + u3_0 - u3_100\n",
+       " - u4_60 + u4_75 >= 0\n",
        "\n",
        "11_prefered_over_14: - e + u1_74 - u1_87 - u2_03 + u2_25 - u3_100 + u3_80\n",
        " + u4_49 - u4_61 >= 0\n",
@@ -531,9 +534,15 @@
        "\n",
        "_C28: - u4_100 + u4_75 >= 0\n",
        "\n",
-       "_C29: - u1_32 - u2_03 + u3_0 >= 0.07\n",
+       "_C29: - 4 u2_03 + u3_0 >= 0\n",
        "\n",
-       "_C30: - u1_32 - u2_03 + u4_49 >= 0.07\n",
+       "_C30: - 2 u1_32 + u3_0 >= 0\n",
+       "\n",
+       "_C31: - u1_32 - u2_03 + u4_49 >= 0\n",
+       "\n",
+       "_C32: u1_32 >= 0.1\n",
+       "\n",
+       "_C33: u2_03 >= 0.02\n",
        "\n",
        "VARIABLES\n",
        "e Continuous\n",
@@ -571,7 +580,7 @@
        "u4_75 Continuous"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,44 +591,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /var/data/python/lib/python3.11/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/f7bc671c46124bc4aadc0916ccf4e301-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/f7bc671c46124bc4aadc0916ccf4e301-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 48 COLUMNS\n",
+      "At line 165 RHS\n",
+      "At line 209 BOUNDS\n",
+      "At line 210 ENDATA\n",
+      "Problem MODEL has 43 rows, 33 columns and 113 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 21 (-22) rows, 17 (-16) columns and 69 (-44) elements\n",
+      "Perturbing problem by 0.001% of 1 - largest nonzero change 0.00018820109 ( 0.018820109%) - largest zero change 0.00017231038\n",
+      "0  Obj -3.485703e-05 Primal inf 0.98999602 (4) Dual inf 0.9998108 (1)\n",
+      "11  Obj 0.29976703\n",
+      "Optimal - objective value 0.3\n",
+      "After Postsolve, objective 0.3, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Optimal objective 0.3 - 11 iterations time 0.002, Presolve 0.00\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n",
       "Status: Optimal\n",
-      "e = 0.28666667\n",
+      "e = 0.3\n",
       "u1_100 = 0.0\n",
-      "u1_32 = 0.28666667\n",
-      "u1_45 = 0.28666667\n",
-      "u1_48 = 0.0\n",
+      "u1_32 = 0.2\n",
+      "u1_45 = 0.2\n",
+      "u1_48 = 0.2\n",
       "u1_60 = 0.0\n",
       "u1_64 = 0.0\n",
       "u1_65 = 0.0\n",
       "u1_74 = 0.0\n",
       "u1_76 = 0.0\n",
       "u1_87 = 0.0\n",
-      "u2_03 = -0.0\n",
+      "u2_03 = 0.1\n",
       "u2_100 = 0.0\n",
-      "u2_25 = 0.0\n",
-      "u2_30 = -0.0\n",
-      "u2_44 = 0.0\n",
-      "u2_6 = 0.0\n",
-      "u2_86 = 0.0\n",
-      "u2_87 = 0.0\n",
+      "u2_25 = 0.1\n",
+      "u2_30 = 0.1\n",
+      "u2_44 = 0.1\n",
+      "u2_6 = 0.1\n",
+      "u2_86 = 0.1\n",
+      "u2_87 = 0.1\n",
       "u2_93 = 0.0\n",
-      "u3_0 = 0.35666667\n",
+      "u3_0 = 0.4\n",
       "u3_100 = 0.0\n",
-      "u3_54 = 0.35666667\n",
+      "u3_54 = 0.4\n",
       "u3_71 = 0.0\n",
       "u3_80 = 0.0\n",
       "u4_100 = 0.0\n",
-      "u4_49 = 0.35666667\n",
-      "u4_54 = 0.35666667\n",
-      "u4_55 = 0.35666667\n",
-      "u4_60 = 0.35666667\n",
+      "u4_49 = 0.3\n",
+      "u4_54 = 0.3\n",
+      "u4_55 = 0.0\n",
+      "u4_60 = 0.0\n",
       "u4_61 = 0.0\n",
       "u4_73 = 0.0\n",
       "u4_75 = 0.0\n"
@@ -638,17 +671,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.28666667, 0.28666667, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[-0.0, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[0.35666667, 0.35666667, 0.0, 0.0, 0.0]\n",
-      "[0.35666667, 0.35666667, 0.35666667, 0.35666667, 0.0, 0.0, 0.0, 0.0]\n"
+      "[0.2, 0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.0, 0.0]\n",
+      "[0.4, 0.4, 0.0, 0.0, 0.0]\n",
+      "[0.3, 0.3, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -666,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1075,7 @@
        "26  0.80  0.06  1.00  0.67  1.0"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
