Added a baseline for UTA GMS

--- a/proj1.ipynb
+++ b/proj1.ipynb
@@ -29,6 +29,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# UTA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pary wariantów do oceny:\n",
     "- 3 i 17 - para 15\n",
     "- 11 i 14 - para 16\n",
@@ -38,7 +45,7 @@
     "\n",
     "Nasza preferencja zakłda wybór wariantów gdzie oba kryteria, c3 i c4, są niższe. W efekcie:\n",
     "\n",
-    "- 3 jest preferowane nad 17\n",
+    "- 3 nierozróżnialne z 17\n",
     "- 11 jest preferowane nad 14\n",
     "- 0 jest nierozróżnialne z 11\n",
     "- 13 jest preferowane nad 25\n",
@@ -56,7 +63,7 @@
     "from pulp import *\n",
     "\n",
     "# Create a problem variable:\n",
-    "prob = LpProblem(\"MaximizeEpsilon\", LpMaximize)\n",
+    "uta = LpProblem(\"MaximizeEpsilon_for_UTA\", LpMaximize)\n",
     "\n",
     "# Create problem variables:\n",
     "# epsilon\n",
@@ -133,49 +140,43 @@
     "u3 = [u3_0, u3_54, u3_56, u3_71, u3_80, u3_88, u3_100]\n",
     "u4 = [u4_49, u4_54, u4_55, u4_60, u4_61, u4_67, u4_73, u4_75, u4_100]\n",
     "\n",
-    "us = [u1, u2, u3, u4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob += e, \"Objective Function\"\n",
+    "us = [u1, u2, u3, u4]\n",
+    "\n",
+    "# Add the objective function:\n",
+    "uta += e, \"Objective Function\"\n",
     "\n",
     "# Add constraints:\n",
     "\n",
     "# preferations\n",
-    "prob += u1_48 + u2_87 + u3_0 + u4_75 == u1_76 + u2_6 + u3_100 + u4_60, \"3 incomparable with 17\"\n",
-    "prob += u1_74 + u2_25 + u3_80 + u4_49 >= u1_87 + u2_3 + u3_100 + u4_61 + e, \"11 prefered over 14\"\n",
-    "prob += u1_60 + u2_93 + u3_0 + u4_73 == u1_74 + u2_25 + u3_80 + u4_49 , \"0 incomparable with 11\"\n",
-    "prob += u1_69 + u2_49 + u3_56 + u4_61 >= u1_71 + u2_25 + u3_88 + u4_67 + e, \"13 prefered over 25\"\n",
-    "prob += u1_64 + u2_44 + u3_54 + u4_54 >= u1_65 + u2_30 + u3_71 + u4_55 + e, \"7 prefered over 8\"\n",
+    "uta += u1_48 + u2_87 + u3_0 + u4_75 == u1_76 + u2_6 + u3_100 + u4_60, \"3 incomparable with 17\"\n",
+    "uta += u1_74 + u2_25 + u3_80 + u4_49 >= u1_87 + u2_3 + u3_100 + u4_61 + e, \"11 prefered over 14\"\n",
+    "uta += u1_60 + u2_93 + u3_0 + u4_73 == u1_74 + u2_25 + u3_80 + u4_49 , \"0 incomparable with 11\"\n",
+    "uta += u1_69 + u2_49 + u3_56 + u4_61 >= u1_71 + u2_25 + u3_88 + u4_67 + e, \"13 prefered over 25\"\n",
+    "uta += u1_64 + u2_44 + u3_54 + u4_54 >= u1_65 + u2_30 + u3_71 + u4_55 + e, \"7 prefered over 8\"\n",
     "\n",
     "# normalizations\n",
-    "prob += u1_32 + u2_3 + u3_0 + u4_49 == 1, \"normalization\"\n",
-    "prob += u1_100 == 0, \"u1_min\"\n",
-    "prob += u2_100 == 0, \"u2_min\"\n",
-    "prob += u3_100 == 0, \"u3_min\"\n",
-    "prob += u4_100 == 0, \"u4_min\"\n",
+    "uta += u1_32 + u2_3 + u3_0 + u4_49 == 1, \"normalization\"\n",
+    "uta += u1_100 == 0, \"u1_min\"\n",
+    "uta += u2_100 == 0, \"u2_min\"\n",
+    "uta += u3_100 == 0, \"u3_min\"\n",
+    "uta += u4_100 == 0, \"u4_min\"\n",
     "\n",
     "# non-negativity - already set in LpVariable\n",
     "# for u in us:\n",
     "#     for a in u:\n",
-    "#         prob += a >= 0\n",
+    "#         uta += a >= 0\n",
     "\n",
     "# monotonicity\n",
     "for u in us:\n",
     "    for a, b in zip(u, u[1:]):\n",
-    "        prob += a >= b\n",
+    "        uta += a >= b\n",
     "\n",
     "# manipulating weights\n",
-    "prob += u3_0 >= u2_3 * 4\n",
-    "prob += u3_0 >= u1_32 * 2\n",
-    "prob += u4_49 >= u1_32 + u2_3\n",
-    "prob += u1_32 >= 0.10\n",
-    "prob += u2_3 >= 0.02\n"
+    "uta += u3_0 >= u2_3 * 4\n",
+    "uta += u3_0 >= u1_32 * 2\n",
+    "uta += u4_49 >= u1_32 + u2_3\n",
+    "uta += u1_32 >= 0.10\n",
+    "uta += u2_3 >= 0.02\n"
    ]
   },
   {
@@ -184,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob"
+    "uta"
    ]
   },
   {
@@ -194,11 +195,11 @@
    "outputs": [],
    "source": [
     "# Solve the problem\n",
-    "prob.solve()\n",
-    "print(\"Status:\", LpStatus[prob.status])\n",
+    "uta.solve()\n",
+    "print(\"Status:\", LpStatus[uta.status])\n",
     "\n",
-    "# Print the optimal production amount of x and y\n",
-    "for v in prob.variables():\n",
+    "# Print the values\n",
+    "for v in uta.variables():\n",
     "    print(v.name, \"=\", v.varValue)"
    ]
   },
@@ -278,9 +279,9 @@
     "axs[0, 0].plot(x, y1)\n",
     "axs[0, 0].set_title('uf1')\n",
     "axs[0, 0].set_xlim(min(x), max(x))\n",
-    "axs[0, 0].set_xlabel('c1')\n",
+    "axs[0, 0].set_xlabel('Wartość kryterium c1')\n",
     "axs[0, 0].set_ylim(0, max(y1)+0.01)\n",
-    "axs[0, 0].set_ylabel('u1')\n",
+    "axs[0, 0].set_ylabel('Wartość funkcji użyteczności u1')\n",
     "axs[0, 0].set_xticks([0, 0.64, 0.65, 0.76, 0.87, 1.0])\n",
     "axs[0, 0].set_xticklabels(['0.0', '0.64        ', '       0.65', '0.76', '0.87', '1.0'])\n",
     "axs[0, 0].set_yticks([0, 0.06, 0.1])\n",
@@ -290,9 +291,9 @@
     "axs[0, 1].plot(x, y2)\n",
     "axs[0, 1].set_title('uf2')\n",
     "axs[0, 1].set_xlim(min(x), max(x))\n",
-    "axs[0, 1].set_xlabel('c2')\n",
+    "axs[0, 1].set_xlabel('Wartość kryterium c2')\n",
     "axs[0, 1].set_ylim(0, max(y2)+0.002)\n",
-    "axs[0, 1].set_ylabel('u2')\n",
+    "axs[0, 1].set_ylabel('Wartość funkcji użyteczności u2')\n",
     "axs[0, 1].set_xticks([0, 0.49, 0.87, 1.0])\n",
     "axs[0, 1].set_xticklabels(['0.0', '0.49', '0.87', '1.0'])\n",
     "axs[0, 1].set_yticks([0, 0.02])\n",
@@ -302,9 +303,9 @@
     "axs[1, 0].plot(x, y3)\n",
     "axs[1, 0].set_title('uf3')\n",
     "axs[1, 0].set_xlim(min(x), max(x))\n",
-    "axs[1, 0].set_xlabel('c3')\n",
+    "axs[1, 0].set_xlabel('Wartość kryterium c3')\n",
     "axs[1, 0].set_ylim(0, max(y3)+0.05)\n",
-    "axs[1, 0].set_ylabel('u3')\n",
+    "axs[1, 0].set_ylabel('Wartość funkcji użyteczności u3')\n",
     "axs[1, 0].set_xticks([0, 0.56, 0.71, 1.0])\n",
     "axs[1, 0].set_xticklabels(['0.0', '0.56', '0.71', '1.0'])\n",
     "axs[1, 0].set_yticks([0, 0.43])\n",
@@ -314,9 +315,9 @@
     "axs[1, 1].plot(x, y4)\n",
     "axs[1, 1].set_title('uf4')\n",
     "axs[1, 1].set_xlim(min(x), max(x))\n",
-    "axs[1, 1].set_xlabel('c4')\n",
+    "axs[1, 1].set_xlabel('Wartość kryterium c4')\n",
     "axs[1, 1].set_ylim(0, max(y4)+0.05)\n",
-    "axs[1, 1].set_ylabel('u4')\n",
+    "axs[1, 1].set_ylabel('Wartość funkcji użyteczności u4')\n",
     "axs[1, 1].set_xticks([0, 0.6, 0.61, 0.67, 1.0])\n",
     "axs[1, 1].set_xticklabels(['0.0', '0.6        ', '    0.61', '      0.67', '1.0'])\n",
     "axs[1, 1].set_yticks([0, 0.04, 0.45])\n",
@@ -346,6 +347,91 @@
    "outputs": [],
    "source": [
     "df_sorted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# UTA GMS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the libraries\n",
+    "import numpy as np\n",
+    "from pulp import *\n",
+    "\n",
+    "result = np.zeros([27, 27])\n",
+    "\n",
+    "for i in range(27):\n",
+    "    for j in range(27):\n",
+    "        # Create a problem variable:\n",
+    "        uta_gms = LpProblem(\"MaximizeEpsilon_for_UTA_GMS\", LpMaximize)\n",
+    "\n",
+    "        # Create problem variables:\n",
+    "        # epsilon\n",
+    "        e = LpVariable(\"e\", lowBound=0)\n",
+    "\n",
+    "        u1 = [] # to be developed\n",
+    "        u2 = [] # to be developed\n",
+    "        u3 = [] # to be developed\n",
+    "        u4 = [] # to be developed\n",
+    "\n",
+    "        us = [u1, u2, u3, u4]\n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "        # Add the objective function:\n",
+    "        uta_gms += e, \"Objective Function\"\n",
+    "\n",
+    "        # Add constraints:\n",
+    "\n",
+    "        # preferations\n",
+    "        uta_gms += u1_48 + u2_87 + u3_0 + u4_75 == u1_76 + u2_6 + u3_100 + u4_60, \"3 incomparable with 17\"\n",
+    "        uta_gms += u1_74 + u2_25 + u3_80 + u4_49 >= u1_87 + u2_3 + u3_100 + u4_61 + e, \"11 prefered over 14\"\n",
+    "        uta_gms += u1_60 + u2_93 + u3_0 + u4_73 == u1_74 + u2_25 + u3_80 + u4_49 , \"0 incomparable with 11\"\n",
+    "        uta_gms += u1_69 + u2_49 + u3_56 + u4_61 >= u1_71 + u2_25 + u3_88 + u4_67 + e, \"13 prefered over 25\"\n",
+    "        uta_gms += u1_64 + u2_44 + u3_54 + u4_54 >= u1_65 + u2_30 + u3_71 + u4_55 + e, \"7 prefered over 8\"\n",
+    "\n",
+    "        # normalizations\n",
+    "        uta_gms += u1_32 + u2_3 + u3_0 + u4_49 == 1, \"normalization\"\n",
+    "        uta_gms += u1_100 == 0, \"u1_min\"\n",
+    "        uta_gms += u2_100 == 0, \"u2_min\"\n",
+    "        uta_gms += u3_100 == 0, \"u3_min\"\n",
+    "        uta_gms += u4_100 == 0, \"u4_min\"\n",
+    "\n",
+    "        # monotonicity\n",
+    "        for u in us:\n",
+    "            for a, b in zip(u, u[1:]):\n",
+    "                uta += a >= b\n",
+    "\n",
+    "        # manipulating weights\n",
+    "        uta_gms += u3_0 >= u2_3 * 4\n",
+    "        uta_gms += u3_0 >= u1_32 * 2\n",
+    "        uta_gms += u4_49 >= u1_32 + u2_3\n",
+    "        uta_gms += u1_32 >= 0.10\n",
+    "        uta_gms += u2_3 >= 0.02\n",
+    "\n",
+    "        uta_gms += i > j + e # to be developed \n",
+    "\n",
+    "        uta_gms.solve()\n",
+    "\n",
+    "        if uta_gms.objective.value() > 0:\n",
+    "            result[i, j] = 1\n",
+    "        elif uta_gms.objective.value() < 0:\n",
+    "            result[i, j] = -1\n",
+    "        else:\n",
+    "            result[i, j] = 0\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
